[gd_scene load_steps=10 format=3 uid="uid://c470ocohyxrie"]

[ext_resource type="Script" uid="uid://ypw5sf4d8hiq" path="res://player/player.gd" id="1_4flbx"]
[ext_resource type="PackedScene" uid="uid://du456exwxm7tu" path="res://player/models/hand_1.blend" id="2_onrkg"]
[ext_resource type="PackedScene" uid="uid://bfcxlq3a0625l" path="res://player/models/dagger_1.blend" id="3_i3pqv"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_sh265"]
height = 2.08099

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_g1dw6"]
radius = 0.193275
height = 1.28742

[sub_resource type="Animation" id="Animation_g1dw6"]
resource_name = "Idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera/HandPivot/Hand:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector3(-0.02839, 1.35385, -1.22899), Vector3(-0.312714, 1.35669, -1.41455)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera/HandPivot/Hand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector3(0.337534, -0.175394, -0.68353), Vector3(0.338, -0.3056, -0.684)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera/HandPivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_qjkh3"]
resource_name = "PrimaryAttack"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera/HandPivot/Hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.814047, -0.175394, -0.847022)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera/HandPivot/Hand:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.969711, 0.780497, -0.0146004)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera/HandPivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -1.36464, 0)]
}

[sub_resource type="Animation" id="Animation_yw30f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera/HandPivot/Hand:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.02839, 1.35385, -1.22899)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera/HandPivot/Hand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.166832, -0.098129, -0.32358)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera/HandPivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qjkh3"]
_data = {
&"Idle": SubResource("Animation_g1dw6"),
&"PrimaryAttack": SubResource("Animation_qjkh3"),
&"RESET": SubResource("Animation_yw30f")
}

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_4flbx")

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.62761, 0)
shape = SubResource("CapsuleShape3D_sh265")

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.50919, 0)

[node name="HandPivot" type="Node3D" parent="Camera"]

[node name="Hand" parent="Camera/HandPivot" instance=ExtResource("2_onrkg")]
transform = Transform3D(0.0196532, 0.038701, 0.195233, -0.188354, 0.067011, 0.00567723, -0.0643151, -0.184423, 0.0430323, 0.166832, -0.098129, -0.32358)

[node name="Dagger" parent="Camera/HandPivot/Hand" instance=ExtResource("3_i3pqv")]
transform = Transform3D(0.0286784, 1.59737, 0.0871856, -0.33124, 0.0912388, -1.56268, -1.56507, 0.00995983, 0.332331, 0.814677, 0.395053, -0.125711)

[node name="DaggerHitbox" type="Area3D" parent="Camera/HandPivot/Hand/Dagger"]
monitoring = false

[node name="Collision" type="CollisionShape3D" parent="Camera/HandPivot/Hand/Dagger/DaggerHitbox"]
transform = Transform3D(0.999992, -0.00356234, -0.00142965, 0.00356232, 0.999992, 9.4533e-05, 0.00142931, -9.97186e-05, 0.999998, 0.00557405, 0.610127, -0.00803423)
shape = SubResource("CapsuleShape3D_g1dw6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qjkh3")
}
autoplay = "Idle"
playback_default_blend_time = 0.1

[connection signal="body_entered" from="Camera/HandPivot/Hand/Dagger/DaggerHitbox" to="." method="_on_dagger_hitbox_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
